--- a/trunk/Image Tiles/Image Tiles/Image Tiles.csproj
+++ b/trunk/Image Tiles/Image Tiles/Image Tiles.csproj
@@ -94,6 +94,7 @@
     </DesignData>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ImageTiles.ini" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
   </ItemGroup>
