--- a/trunk/Image Tiles/Image Tiles/Image Tiles.csproj
+++ b/trunk/Image Tiles/Image Tiles/Image Tiles.csproj
@@ -49,26 +49,76 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Google.AdMob.Ads.WindowsPhone7">
-      <HintPath>..\..\..\..\Dropbox\Programming\googleadmobadssdkwindowsphone7\GoogleAdMobAdsSDKWindowsPhone7-4.0.4\sdk\Google.AdMob.Ads.WindowsPhone7.dll</HintPath>
+    <Reference Include="AdDuplex.WindowsPhone">
+      <HintPath>..\packages\AdDuplexWP7.2.7.0.3\lib\sl4-windowsphone71\AdDuplex.WindowsPhone.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Advertising.Mobile, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="microsoft.advertising.mobile.ui, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Google.AdMob.Ads.WindowsPhone7, Version=4.0.1.27070, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Google.AdMob.Ads.WindowsPhone7.dll</HintPath>
+    </Reference>
+    <Reference Include="InMobiWP7SDK">
+      <HintPath>..\..\..\..\Dropbox\Programming\InMobi_windows_SDK\InMobi_Windows_AdSDK_200\Windows Phone 7.5\InMobi_WP_SDK_w100\InMobiWP7SDK.dll</HintPath>
+    </Reference>
+    <Reference Include="Inneractive.Nokia.Ad">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Inneractive.Nokia.Ad.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.AdDuplex">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.AdDuplex.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.AdMob">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.AdMob.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.InnerActive">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.InnerActive.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.MillennialMedia">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.MillennialMedia.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.MobFox">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.MobFox.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.PubCenter">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.PubCenter.dll</HintPath>
+    </Reference>
+    <Reference Include="MC.Phone.Ads.Smaato">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MC.Phone.Ads.Smaato.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Advertising.Mobile, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Microsoft.Advertising.Mobile.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Advertising.Mobile.UI, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Microsoft.Advertising.Mobile.UI.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Devices.Sensors" />
     <Reference Include="Microsoft.Phone" />
-    <Reference Include="Microsoft.Phone.Controls" />
-    <Reference Include="Microsoft.Phone.Controls.Maps, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Microsoft.Phone.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Phone.Controls.Maps, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Microsoft.Phone.Controls.Maps.dll</HintPath>
+    </Reference>
     <Reference Include="microsoft.phone.controls.toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="Microsoft.Xna.Framework" />
     <Reference Include="Microsoft.Xna.Framework.Input.Touch" />
-    <Reference Include="MobFox.Ads">
-      <HintPath>..\..\..\..\Dropbox\Programming\MobFox-WP7-SDK-1.3.0\MobFox.Ads.dll</HintPath>
+    <Reference Include="MillennialMedia.WP7.SDK">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MillennialMedia.WP7.SDK.dll</HintPath>
+    </Reference>
+    <Reference Include="MobFox.Ads, Version=1.3.98.46815, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\MobFox.Ads.dll</HintPath>
     </Reference>
     <Reference Include="MobFox.Ads.LocationAware">
       <HintPath>..\..\..\..\Dropbox\Programming\MobFox-WP7-SDK-1.3.0\MobFox.Ads.LocationAware.dll</HintPath>
     </Reference>
+    <Reference Include="SOMAWP7">
+      <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\SOMAWP7.dll</HintPath>
+    </Reference>
     <Reference Include="System.Device" />
+    <Reference Include="System.Observable" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
@@ -78,6 +128,9 @@
     <Reference Include="mscorlib.extensions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.xaml.cs">
+      <DependentUpon>About.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -98,6 +151,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="About.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CropPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -116,15 +173,21 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Ads\UnifiedAd.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="ImageTiles.ini" />
+    <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Ads\AdSettings.xml" />
     <Content Include="ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\AppBar\appbar.basecircle.rest.png" />
+    <Content Include="Assets\AppBar\appbar.cancel.rest.png" />
     <Content Include="Assets\AppBar\appbar.check.rest.png" />
     <Content Include="Assets\AppBar\appbar.close.rest.png" />
     <Content Include="Assets\AppBar\appbar.download.rest.png">
@@ -132,20 +195,27 @@
     </Content>
     <Content Include="Assets\AppBar\appbar.edit.rest.png" />
     <Content Include="Assets\AppBar\appbar.favs.rest.png" />
+    <Content Include="Assets\AppBar\appbar.map.position.rest.png" />
     <Content Include="Assets\AppBar\appbar.next.rest.png" />
+    <Content Include="Assets\AppBar\appbar.questionmark.rest.png" />
     <Content Include="Assets\AppBar\appbar.save.rest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\AppBar\appbar.share.rest.png" />
+    <Content Include="Assets\AppBar\appbar.status.rest.png" />
+    <Content Include="Assets\AppBar\appbar.stop.rest.png" />
     <Content Include="Assets\AppBar\appbar.upload.rest.png" />
+    <Content Include="Assets\AppBar\photo.crop.png" />
     <Content Include="Assets\AppBar\pin.png" />
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="WP-Unified-Ad-HowTo.txt" />
     <Resource Include="PanoramaBackground.png" />
     <Content Include="image.ico" />
     <Content Include="image.png" />
     <Content Include="images.jpg" />
+    <Content Include="P10009031.jpg" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
