--- a/trunk/Image Tiles/trunk/Image Tiles/Image Tiles.csproj
+++ b/trunk/Image Tiles/trunk/Image Tiles/Image Tiles.csproj
@@ -104,7 +104,9 @@
     <Reference Include="Microsoft.Phone.Controls.Maps, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL">
       <HintPath>..\packages\wpunifiedad.1.3.2\lib\sl4-wp71\Microsoft.Phone.Controls.Maps.dll</HintPath>
     </Reference>
-    <Reference Include="microsoft.phone.controls.toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL" />
+    <Reference Include="microsoft.phone.controls.toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
+      <HintPath>Bin\Debug\microsoft.phone.controls.toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="Microsoft.Xna.Framework" />
     <Reference Include="Microsoft.Xna.Framework.Input.Touch" />
@@ -183,7 +185,9 @@
     <None Include="ImageTiles.ini" />
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
-    <None Include="Properties\WMAppManifest.xml" />
+    <None Include="Properties\WMAppManifest.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ads\AdSettings.xml">
